--- a/BuildingQiO.tex
+++ b/BuildingQiO.tex
@@ -102,7 +102,7 @@ However,  our construction relies on the assumption that a quantum secure $i\mat
  \item Set $C^\prime\leftarrow i\mathcal{O}(C).$							
   \item Description of the circuit  $C_q^\prime:$
     \begin{enumerate}
-     \item  Perform the Bell measurement on the leftmost $2n$-qubits on the system $\ket{\phi}\otimes \ket{\psi}),$ where $\ket{\phi}$ is an auxiliary state and $\ket{\psi}$ is an input state. Obtain classical bits $(a_1,b_1\ldots,a_n,b_n)$ and compute the new state
+     \item  Perform the Bell measurement on the leftmost $2n$-qubits on the system $\ket{\phi}\otimes \ket{\psi}),$ where $\ket{\phi}$ is an auxiliary state and $\ket{\psi}$ is an input state. Obtain classical bits $(a_1,b_1\ldots,a_n,b_n)$ and the state
      \begin{equation}
      \label{eq:last}
       C_q(\xgate^{\otimes_{i=1}^{n} b_{i}} \cdot \zgate^{\otimes_{i=1}^{n} a_{i}})\ket{\psi}.
