--- a/prelims.tex
+++ b/prelims.tex
@@ -178,7 +178,7 @@ For any $(a,b)\in\mathbb{F}_2^2$ and any single Clifford gate $U,$ the correspon
 %\cnot (\xgate^{b_1}\zgate^{a_1} \otimes \xgate^{b_2}\zgate^{a_2})=({\xgate^{b_1} {\zgate^{a_1\oplus a_2}}} \otimes {\xgate^{b_1\oplus b_2}}\zgate^{a_2})\cnot, \mbox{ where } f_{\cnot}(a_1,b_1,a_2,b_2)=(a_1\oplus a_2,b_1,a_2, b_1\oplus b_2).\\
 \end{aligned}
 \end{equation*}
-Note we can evaluate $\cnot$ gate on any 2-qubit state $\ket{\psi}$ using gate-teleportation. In this case we have to prepare $4$ qubit Bell state $\ket{\beta_{00}}\otimes \ket{\beta_{00}}$ in step~1 ((\Cref{algo:gate-teleport})). After step~4 of \Cref{algo:gate-teleport}, the system will be in the state
+Note we can evaluate $\cnot$ gate on any 2-qubit state $\ket{\psi}$ using gate-teleportation. In this case we have to prepare $4$ qubit Bell state $\ket{\beta_{00}}\otimes \ket{\beta_{00}}$ in step~1 of \Cref{algo:gate-teleport}. After step~4 of \Cref{algo:gate-teleport}, the system will be in the state
 \begin{equation*}
 \begin{aligned}
  \ket\beta_{a_1,b_1}\otimes \ket\beta_{a_2,b_2} \otimes \cnot(\xgate^{a_1}\zgate^{b_1}\otimes \xgate^{a_2}\zgate^{b_2})\ket{\psi}
