--- a/BuildingQiO.tex
+++ b/BuildingQiO.tex
@@ -27,7 +27,7 @@ A  polynomial-time quantum algorithm for a class of quantum circuits $\mathcal{C
 $$(\ket{\phi}, C_q^\prime)\leftarrow Qi\mathcal{O}(C_q) \;  \mbox{ and }\; C_q^\prime(\ket{\phi},\ket{\psi})=C_{q}(\ket{\psi})$$
 %where $\rho \in Q(m)$ and $C_q^\prime$  is a $m+n$ qubit quantum circuit.
 											
-%\anote{above, we are mixing pure states such as $\ket{\phi}$ with mixed states, such as $\rho$. This gets confusing, but I don't know exacly how to fix it. Maybe $\rho$ could be assumed wlog to be pure, so we can use use $\ket{\psi}$ instead of $\rho?$. }
+%\anote{above, we are mixing pure states such as $\ket{\phi}$ with mixed states, such as $\rho$. This gets confusing, but I don't know exactly how to fix it. Maybe $\rho$ could be assumed wlog to be pure, so we can use use $\ket{\psi}$ instead of $\rho?$. }
 
 \item  {\tt Polynomial Slowdown:}  For every $C_{q}\in \mathcal{C}_Q,$
 \begin{itemize}
