--- a/intro.tex
+++ b/intro.tex
@@ -34,23 +34,23 @@ Our contribution establishes indistinguishability obfuscation for certain famili
 %\Anne{I need to check \cite{AG04} again: does their definition include a quantum state, as output by the obfuscator?}
 %$Qi\mathcal{O}$
 %and show how to construct a $Qi\mathcal{O}$ for certain families of quantum circuits.
-First, we define indistinguishability obfuscation for quantum circuits ($Qi\mathcal{O}$)(\Cref{sec:QiO-Cliffords and more}). Importantly, this definition specifies that on input a classical description of a quantum circuit~$C_q$, the obfuscator outputs a \emph{pair} $(\ket{\phi}, C_q^\prime)$, where $\ket{\phi}$ is an auxillary quantum state and $C_q^\prime$ is a quantum circuit, with the property that
+First, we define indistinguishability obfuscation for quantum circuits ($Qi\mathcal{O}$)(\Cref{sec:QiO-Cliffords and more}). Importantly, this definition specifies that on input a classical description of a quantum circuit~$C_q$, the obfuscator outputs a \emph{pair} $(\ket{\phi}, C_q^\prime)$, where $\ket{\phi}$ is an auxiliary quantum state and $C_q^\prime$ is a quantum circuit, with the property that
 $C_q^\prime(\ket{\phi},\ket{\psi})=C_{q}(\ket{\psi})$ for all inputs $\ket{\psi}$.
 %\Anne{I am currently thinking that we could let the quantum iO output a pure state, \emph{e.g.}, $\ket{\phi}$, instead of a mixed state $\rho$. This could simplify things later. But I don't know if this is general enough.}
  
 In terms of constructing $Qi\mathcal{O}$, we first focus on the family of \emph{Clifford} circuits and show two methods of obfuscation: one straightforward method based on the canonical representation of Cliffords, and another based on the
 % is based on the canonical representation of Clifford circuits~\cite{AG04}, while the second construction is based on the
 principle of gate teleportation~\cite{GC99}.
-Clifford circuits are quantum circuits that are built from the gateset $\{\xgate, \zgate, \pgate, \cnot, \hgate\}$ . They are known not to be universal for quantum computation and  are, in a certain sense, the quantum equivalent of classical \emph{linear circuits}. It is known that Clifford circuits can be efficiently simulated on a classical computer~\cite{Got98}; however, note that  this simulation is with respect to a \emph{classical} distribution, hence for a purely quantum computation, quantum circuits are required, which motivates the obfuscation of this circuit class. Next,  Clifford circuits are known not to be universal for quantum computation, but they are an important building block for fault-tolerant quantum computing, for instance, due to the fact that Cliffords admit transversal computations on many fault-tolerant codes.
+Clifford circuits are quantum circuits that are built from the gate-set $\{\xgate, \zgate, \pgate, \cnot, \hgate\}$ . They are known not to be universal for quantum computation and  are, in a certain sense, the quantum equivalent of classical \emph{linear circuits}. It is known that Clifford circuits can be efficiently simulated on a classical computer~\cite{Got98}; however, note that  this simulation is with respect to a \emph{classical} distribution, hence for a purely quantum computation, quantum circuits are required, which motivates the obfuscation of this circuit class. Next,  Clifford circuits are known not to be universal for quantum computation, but they are an important building block for fault-tolerant quantum computing, for instance, due to the fact that Cliffords admit transversal computations on many fault-tolerant codes.
 
 \paragraph{Obfuscating Cliffords using a canonical form.} Our first construction of $Qi\mathcal{O}$ for Clifford circuits starts with the well-known fact that a canonical form is an $i\mathcal{O}$. We point out that a canonical form for Clifford circuit was presented in~\cite{AG04}; which completes this construction (we also note that an alternative canonical form was also presented in~\cite{Sel13arxiv}). This canonical form technique  does not require any assumptions. Moreover, the obfuscated circuits are classical, and hence can be easily communicated, stored, used and copied.
 
 \paragraph{Obfuscating Cliffords using gate teleportation.} Our second construction of $Qi\mathcal{O}$ for Clifford circuits takes a very different approach. We start with the gate-teleportation scheme~\cite{GC99}: according to this, it is possible to \emph{encode} a quantum computation~$C$ into a quantum state (specifically, by preparing a collection of entangled qubit pairs, and applying~$C$ to half of this preparation). Then, in order to perform a quantum computation on a target input $\ket{\psi}$, we \emph{teleport} $\ket{\psi}$ \emph{into} the prepared entangled state. This causes the state $\ket{\psi}$ to undergo the evolution of $C$, \emph{up to some corrections}, based on the teleportation bits. If $C$ is chosen from the Clifford circuits, these corrections are relatively simple and thus the idea is to use a classical  $i\mathcal{O}$ to provide the correction function (note that our construction does not require a full $i\mathcal{O}$ but rather relies on a weaker $i\mathcal{O}$ that can obfuscate a certain family of functions.)
-In contrast to the previous scheme, the gate-teleportation scheme requires the assumption of quantum-secure classical $i\mathcal{O}$ for a certain family of functions (section \ref{update function}) and the obfuscated circuits are quantum. While this presents a technological challenge to communication, storage and also usage, there could be advantages to storing quantum programs into quantum states, for instance to take advantage of their \emph{uncloneability} \cite{Aar09,BL19arxiv}.
+In contrast to the previous scheme, the gate-teleportation scheme requires the assumption of quantum-secure classical $i\mathcal{O}$ for a certain family of functions (section \ref{update function}) and the obfuscated circuits are quantum. While this presents a technological challenge to communication, storage and also usage, there could be advantages to storing quantum programs into quantum states, for instance to take advantage of their \emph{unclonability} \cite{Aar09,BL19arxiv}.
 
 
 
-\paragraph{Obfuscating Beyond Cliffords} Next, in our main result (\Cref{QiO:Clifford+T:family}), we generalize the gate-teleportation scheme for Clifford circuits, and show a $Qi\mathcal{O}$ obfuscator for all quantum circuits where the number of non-Clifford  gates is at most logarithmic in the circuit size. For this, we consider the commonly-used Clifford+$\tgate$ gateset, and we note that the $\tgate$ relates to the $\xgate, \zgate$ as: $\tgate \xgate^b \zgate^a=\xgate^b \zgate^{a\oplus b}\pgate^b \tgate$. This means that, if we implement a circuit $C$ with $\tgate$ gates as in the gate-teleportation scheme above, then the \emph{correction} function is no longer a simple Pauli update (as in the case for Cliffords). However, this is only partially true: since the Paulis form a basis, there is always a way to represent an update as a complex, linear combination of Pauli matrices. In particular, for the case of a $\tgate$, we note that $\pgate=(\frac{1+i}{2}) \igate + (\frac{1-i}{2})\zgate$. Hence, it \emph{is} possible to produce an update function for general quantum circuits that are encoded via gate teleportation. To illustration this, we first analyze the case of a general Clifford+$\tgate$ quantum circuit on a \emph{single} qubit (\Cref{sec:1-qubit}). Here, we are able to provide $Qi\mathcal{O}$ for all circuits. Next, for general quantum circuits, (\Cref{sec:n-qubit-circuits}), we note that the update function becomes more and more complex as the number of $\tgate$ gates increases. We show that if we limit the number of $\tgate$ gates to be logarithmic in the circuit size, we can nevertheless reach an efficient construction.
+\paragraph{Obfuscating Beyond Cliffords} Next, in our main result (\Cref{QiO:Clifford+T:family}), we generalize the gate-teleportation scheme for Clifford circuits, and show a $Qi\mathcal{O}$ obfuscator for all quantum circuits where the number of non-Clifford  gates is at most logarithmic in the circuit size. For this, we consider the commonly-used Clifford+$\tgate$ gate-set, and we note that the $\tgate$ relates to the $\xgate, \zgate$ as: $\tgate \xgate^b \zgate^a=\xgate^b \zgate^{a\oplus b}\pgate^b \tgate$. This means that, if we implement a circuit $C$ with $\tgate$ gates as in the gate-teleportation scheme above, then the \emph{correction} function is no longer a simple Pauli update (as in the case for Cliffords). However, this is only partially true: since the Paulis form a basis, there is always a way to represent an update as a complex, linear combination of Pauli matrices. In particular, for the case of a $\tgate$, we note that $\pgate=(\frac{1+i}{2}) \igate + (\frac{1-i}{2})\zgate$. Hence, it \emph{is} possible to produce an update function for general quantum circuits that are encoded via gate teleportation. To illustration this, we first analyze the case of a general Clifford+$\tgate$ quantum circuit on a \emph{single} qubit (\Cref{sec:1-qubit}). Here, we are able to provide $Qi\mathcal{O}$ for all circuits. Next, for general quantum circuits, (\Cref{sec:n-qubit-circuits}), we note that the update function becomes more and more complex as the number of $\tgate$ gates increases. We show that if we limit the number of $\tgate$ gates to be logarithmic in the circuit size, we can nevertheless reach an efficient construction.
 
 
 We note that,  for many other quantum cryptographic primitives, it is the case that the $\tgate$ gate the bottleneck (somewhat akin to a \emph{multiplication} in the classical case). This has been observed, \emph{e.g.}, in the context of \emph{homomorphic quantum encryption}~\cite{BJ15}, and instantaneous quantum computation \cite{Spel16}.
